Pandas İle String Fonksiyonları Kullanımı

--- a/20 ] Pandas Veri Analizi/9) Pandas ile Kayıp ve Bozuk Veri Analizi.ipynb
+++ b/20 ] Pandas Veri Analizi/9) Pandas ile Kayıp ve Bozuk Veri Analizi.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -260,14 +260,14 @@
      "output_type": "stream",
      "text": [
       "   column1  column2  column3  column4\n",
-      "a     83.0     44.0     32.0      NaN\n",
+      "a     57.0     71.0     39.0      NaN\n",
       "b      NaN      NaN      NaN     30.0\n",
-      "c     16.0     81.0     59.0      NaN\n",
+      "c     11.0     54.0     33.0      NaN\n",
       "d      NaN      NaN      NaN     51.0\n",
-      "e     49.0     36.0     50.0      NaN\n",
-      "f     20.0     30.0     64.0     30.0\n",
+      "e     18.0     87.0     96.0      NaN\n",
+      "f     96.0     74.0     49.0     30.0\n",
       "g      NaN      NaN      NaN      NaN\n",
-      "h     84.0     16.0     62.0     10.0\n",
+      "h     14.0     23.0     25.0     10.0\n",
       "             ◽   ◽   ◽\n",
       "a    False\n",
       "b     True\n",
@@ -287,18 +287,13 @@
       "b   NaN\n",
       "d   NaN\n",
       "g   NaN\n",
-      "Name: column1, dtype: float64\n",
-      "a    83.0\n",
-      "c    16.0\n",
-      "e    49.0\n",
-      "f    20.0\n",
-      "h    84.0\n",
       "Name: column1, dtype: float64\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "# 10 -100 arsı 15 sayıdan oluşan 5 e 3 lük matrix oluşturalım\n",
     "data = np.random.randint(10,100,15).reshape(5,3)\n",
@@ -338,36 +333,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* devam"
+    "* devam\n",
+    "\n",
+    "        dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a    32.0\n",
-      "c    38.0\n",
-      "e    95.0\n",
-      "f    41.0\n",
-      "h    75.0\n",
+      "a    36.0\n",
+      "c    64.0\n",
+      "e    25.0\n",
+      "f    10.0\n",
+      "h    87.0\n",
       "Name: column1, dtype: float64\n",
       "             ◽   ◽   ◽\n",
       "   column1  column2  column3  column4\n",
-      "a     32.0     36.0     14.0      NaN\n",
-      "c     38.0     99.0     10.0      NaN\n",
-      "e     95.0     36.0     54.0      NaN\n",
-      "f     41.0     89.0     63.0     30.0\n",
-      "h     75.0     42.0     78.0     10.0\n"
+      "a     36.0     83.0     66.0      NaN\n",
+      "c     64.0     88.0     46.0      NaN\n",
+      "e     25.0     85.0     43.0      NaN\n",
+      "f     10.0     16.0     18.0     30.0\n",
+      "h     87.0     20.0     45.0     10.0\n",
+      "             ◽   ◽   ◽\n",
+      "   column1  column2  column3  column4\n",
+      "f     10.0     16.0     18.0     30.0\n",
+      "h     87.0     20.0     45.0     10.0\n",
+      "             ◽   ◽   ◽\n",
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: [a, b, c, d, e, f, g, h]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "# 10 -100 arsı 15 sayıdan oluşan 5 e 3 lük matrix oluşturalım\n",
     "data = np.random.randint(10,100,15).reshape(5,3)\n",
@@ -386,10 +392,433 @@
     "print(result)\n",
     "print(\"             ◽   ◽   ◽\")\n",
     "\n",
-    "\n",
     "# yukarıdakinden column1 filtrelemesini tekrar kaldıralım tüm dataFrame de arasın yine\n",
     "result = df[df[\"column1\"].notnull()]\n",
-    "print(result)   # column1 de nan olmayan alanları verirken aynı satırlardaki nan olanlar da gösterilmiş oluyor (araya kaynıyor)"
+    "print(result)   # column1 de nan olmayan alanları verirken aynı satırlardaki nan olanlar da gösterilmiş oluyor (araya kaynıyor)\n",
+    "print(\"             ◽   ◽   ◽\")\n",
+    "\n",
+    "# dropna ile drop dan farklı olarak nan olan değerlerin olduğu satırı & stünu silebiliyoruz \n",
+    "result = df.dropna() # dropna varsayılan olarak axis = 0 dır o nedenle axis belirtmedik\n",
+    "print(result)\n",
+    "print(\"             ◽   ◽   ◽\")\n",
+    "\n",
+    "# yukarıdakinin axis = 1 li halini yapalım\n",
+    "result = df.dropna(axis= 1)\n",
+    "print(result)   # boş değer geldi çünkü nan olmayan hiç bir kolon yok\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* devam\n",
+    "\n",
+    "        how = \"\"\n",
+    "        subset = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   column1  column2  column3  column4\n",
+      "a     73.0     69.0     51.0      NaN\n",
+      "b      NaN      NaN      NaN     30.0\n",
+      "c     25.0     85.0     79.0      NaN\n",
+      "d      NaN      NaN      NaN     51.0\n",
+      "e     43.0     93.0     17.0      NaN\n",
+      "f     85.0     38.0     14.0     30.0\n",
+      "g      NaN      NaN      NaN      NaN\n",
+      "h     77.0     47.0     23.0     10.0\n",
+      "             ◽   ◽   ◽\n",
+      "   column1  column2  column3  column4\n",
+      "f     85.0     38.0     14.0     30.0\n",
+      "h     77.0     47.0     23.0     10.0\n",
+      "             ◽   ◽   ◽\n",
+      "   column1  column2  column3  column4\n",
+      "a     73.0     69.0     51.0      NaN\n",
+      "b      NaN      NaN      NaN     30.0\n",
+      "c     25.0     85.0     79.0      NaN\n",
+      "d      NaN      NaN      NaN     51.0\n",
+      "e     43.0     93.0     17.0      NaN\n",
+      "f     85.0     38.0     14.0     30.0\n",
+      "h     77.0     47.0     23.0     10.0\n",
+      "             ◽   ◽   ◽\n",
+      "   column1  column2  column3  column4\n",
+      "a     73.0     69.0     51.0      NaN\n",
+      "c     25.0     85.0     79.0      NaN\n",
+      "e     43.0     93.0     17.0      NaN\n",
+      "f     85.0     38.0     14.0     30.0\n",
+      "h     77.0     47.0     23.0     10.0\n",
+      "             ◽   ◽   ◽\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 10 -100 arsı 15 sayıdan oluşan 5 e 3 lük matrix oluşturalım\n",
+    "data = np.random.randint(10,100,15).reshape(5,3)\n",
+    "# dataFrame oluşturalım\n",
+    "df = pd.DataFrame(data, index= ['a', 'c', 'e', 'f', 'h'], columns = ['column1','column2','column3'])\n",
+    "# dataFrame tekrar indexleyelim (aralara 3 index daha ekledik)\n",
+    "df = df.reindex(['a','b','c','d','e','f','g','h'])\n",
+    "# yeni kolon oluşturalım\n",
+    "newColumn = [np.nan,30,np.nan,51,np.nan,30,np.nan,10]  # np.nan (nan değer eklemenin kısa yolu) # 8 satır oldu\n",
+    "# kolonu dataFrame imize ekleyelim 4.kolon olarak\n",
+    "df[\"column4\"] = newColumn\n",
+    "print(df)\n",
+    "#----- güncel temel kod\n",
+    "print(\"             ◽   ◽   ◽\")\n",
+    "\n",
+    "\n",
+    "# how parametresi var \n",
+    "# \"any\"\n",
+    "result = df.dropna(how = \"any\")    #  any anlamı herhangi bir nan değer bulursa o satır&sütunu siler.\n",
+    "print(result)\n",
+    "print(\"             ◽   ◽   ◽\")\n",
+    "\n",
+    "# \"all\" tüm satır nan ise siler\n",
+    "result = df.dropna(how = \"all\")\n",
+    "print(result)\n",
+    "print(\"             ◽   ◽   ◽\")\n",
+    "\n",
+    "# subset parametresi var\n",
+    "# hangi kolonlar içerisinde yukarıdaki aramaları gerçekleştirebileceğimizi belirtmek için subset\n",
+    "result = df.dropna(subset= [\"column1\",\"column2\"], how= \"all\")\n",
+    "print(result)   # iki kolonda da nan değer varsa bu değer getirilmez\n",
+    "print(\"             ◽   ◽   ◽\")\n",
+    "\n",
+    "# devam"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* devam\n",
+    "\n",
+    "        thresh = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   column1  column2  column3  column4\n",
+      "a     73.0     21.0     72.0      NaN\n",
+      "b      NaN      NaN      NaN     30.0\n",
+      "c     39.0     78.0     55.0      NaN\n",
+      "d      NaN      NaN      NaN     51.0\n",
+      "e     23.0     32.0     74.0      NaN\n",
+      "f     24.0     74.0     92.0     30.0\n",
+      "g      NaN      NaN      NaN      NaN\n",
+      "h     97.0     41.0     84.0     10.0\n",
+      "             ◽   ◽   ◽\n",
+      "   column1  column2  column3  column4\n",
+      "a     73.0     21.0     72.0      NaN\n",
+      "c     39.0     78.0     55.0      NaN\n",
+      "e     23.0     32.0     74.0      NaN\n",
+      "f     24.0     74.0     92.0     30.0\n",
+      "h     97.0     41.0     84.0     10.0\n",
+      "             ◽   ◽   ◽\n",
+      "   column1  column2  column3  column4\n",
+      "a     73.0     21.0     72.0      NaN\n",
+      "c     39.0     78.0     55.0      NaN\n",
+      "e     23.0     32.0     74.0      NaN\n",
+      "f     24.0     74.0     92.0     30.0\n",
+      "h     97.0     41.0     84.0     10.0\n",
+      "             ◽   ◽   ◽\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 10 -100 arsı 15 sayıdan oluşan 5 e 3 lük matrix oluşturalım\n",
+    "data = np.random.randint(10,100,15).reshape(5,3)\n",
+    "# dataFrame oluşturalım\n",
+    "df = pd.DataFrame(data, index= ['a', 'c', 'e', 'f', 'h'], columns = ['column1','column2','column3'])\n",
+    "# dataFrame tekrar indexleyelim (aralara 3 index daha ekledik)\n",
+    "df = df.reindex(['a','b','c','d','e','f','g','h'])\n",
+    "# yeni kolon oluşturalım\n",
+    "newColumn = [np.nan,30,np.nan,51,np.nan,30,np.nan,10]  # np.nan (nan değer eklemenin kısa yolu) # 8 satır oldu\n",
+    "# kolonu dataFrame imize ekleyelim 4.kolon olarak\n",
+    "df[\"column4\"] = newColumn\n",
+    "print(df)\n",
+    "#----- güncel temel kod\n",
+    "print(\"             ◽   ◽   ◽\")\n",
+    "\n",
+    "# yukarıdakinin \"any\" hali\n",
+    "result = df.dropna(subset= [\"column1\",\"column2\"], how = \"any\")\n",
+    "print(result)\n",
+    "print(\"             ◽   ◽   ◽\")\n",
+    "\n",
+    "# dropna farklı kullanıma bakalım\n",
+    "# thresh parametresi\n",
+    "# nan değerler haricinde (thresh = 2) iki tane düzgün değer varsa bu kayıtları & satırları silme işime yarıyor demek\n",
+    "result = df.dropna(thresh = 2) \n",
+    "print(result)   # en az 2 tane düzgün veri olan kayıtları silmez\n",
+    "print(\"             ◽   ◽   ◽\")\n",
+    "\n",
+    "# devam"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* devam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   column1  column2  column3  column4\n",
+      "a     13.0     48.0     48.0      NaN\n",
+      "b      NaN      NaN      NaN     30.0\n",
+      "c     10.0     32.0     26.0      NaN\n",
+      "d      NaN      NaN      NaN     51.0\n",
+      "e     34.0     36.0     24.0      NaN\n",
+      "f     51.0     57.0     16.0     30.0\n",
+      "g      NaN      NaN      NaN      NaN\n",
+      "h     92.0     78.0     56.0     10.0\n",
+      "             ◽   ◽   ◽\n",
+      "   column1  column2  column3  column4\n",
+      "f     51.0     57.0     16.0     30.0\n",
+      "h     92.0     78.0     56.0     10.0\n",
+      "             ◽   ◽   ◽\n",
+      "   column1  column2  column3  column4\n",
+      "a     13.0     48.0     48.0      NaN\n",
+      "c     10.0     32.0     26.0      NaN\n",
+      "e     34.0     36.0     24.0      NaN\n",
+      "f     51.0     57.0     16.0     30.0\n",
+      "h     92.0     78.0     56.0     10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 10 -100 arsı 15 sayıdan oluşan 5 e 3 lük matrix oluşturalım\n",
+    "data = np.random.randint(10,100,15).reshape(5,3)\n",
+    "# dataFrame oluşturalım\n",
+    "df = pd.DataFrame(data, index= ['a', 'c', 'e', 'f', 'h'], columns = ['column1','column2','column3'])\n",
+    "# dataFrame tekrar indexleyelim (aralara 3 index daha ekledik)\n",
+    "df = df.reindex(['a','b','c','d','e','f','g','h'])\n",
+    "# yeni kolon oluşturalım\n",
+    "newColumn = [np.nan,30,np.nan,51,np.nan,30,np.nan,10]  # np.nan (nan değer eklemenin kısa yolu) # 8 satır oldu\n",
+    "# kolonu dataFrame imize ekleyelim 4.kolon olarak\n",
+    "df[\"column4\"] = newColumn\n",
+    "print(df)\n",
+    "#----- güncel temel kod\n",
+    "print(\"             ◽   ◽   ◽\")\n",
+    "\n",
+    "# en az 4 yapalım (thresh = 4)\n",
+    "result = df.dropna(thresh = 4) \n",
+    "print(result)   # sadece iki kayıt varmış\n",
+    "print(\"             ◽   ◽   ◽\")\n",
+    "\n",
+    "# en az 3 yapalım\n",
+    "result = df.dropna(thresh = 3) \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NaN olan değerlere farklı bir değer atıyabiliriz\n",
+    "\n",
+    "        fillna()\n",
+    "        value = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   column1  column2  column3  column4\n",
+      "a     11.0     57.0     99.0      NaN\n",
+      "b      NaN      NaN      NaN     30.0\n",
+      "c     56.0     12.0     14.0      NaN\n",
+      "d      NaN      NaN      NaN     51.0\n",
+      "e     53.0     15.0     24.0      NaN\n",
+      "f     86.0     12.0     74.0     30.0\n",
+      "g      NaN      NaN      NaN      NaN\n",
+      "h     78.0     11.0     39.0     10.0\n",
+      "             ◽   ◽   ◽\n",
+      "    column1   column2   column3   column4\n",
+      "a      11.0      57.0      99.0  no input\n",
+      "b  no input  no input  no input      30.0\n",
+      "c      56.0      12.0      14.0  no input\n",
+      "d  no input  no input  no input      51.0\n",
+      "e      53.0      15.0      24.0  no input\n",
+      "f      86.0      12.0      74.0      30.0\n",
+      "g  no input  no input  no input  no input\n",
+      "h      78.0      11.0      39.0      10.0\n",
+      "             ◽   ◽   ◽\n",
+      "  column1 column2 column3 column4\n",
+      "a    11.0    57.0    99.0       1\n",
+      "b       1       1       1    30.0\n",
+      "c    56.0    12.0    14.0       1\n",
+      "d       1       1       1    51.0\n",
+      "e    53.0    15.0    24.0       1\n",
+      "f    86.0    12.0    74.0    30.0\n",
+      "g       1       1       1       1\n",
+      "h    78.0    11.0    39.0    10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 10 -100 arsı 15 sayıdan oluşan 5 e 3 lük matrix oluşturalım\n",
+    "data = np.random.randint(10,100,15).reshape(5,3)\n",
+    "# dataFrame oluşturalım\n",
+    "df = pd.DataFrame(data, index= ['a', 'c', 'e', 'f', 'h'], columns = ['column1','column2','column3'])\n",
+    "# dataFrame tekrar indexleyelim (aralara 3 index daha ekledik)\n",
+    "df = df.reindex(['a','b','c','d','e','f','g','h'])\n",
+    "# yeni kolon oluşturalım\n",
+    "newColumn = [np.nan,30,np.nan,51,np.nan,30,np.nan,10]  # np.nan (nan değer eklemenin kısa yolu) # 8 satır oldu\n",
+    "# kolonu dataFrame imize ekleyelim 4.kolon olarak\n",
+    "df[\"column4\"] = newColumn\n",
+    "print(df)\n",
+    "#----- güncel temel kod\n",
+    "print(\"             ◽   ◽   ◽\")\n",
+    "\n",
+    "# nan olan alanları dolduralım \n",
+    "# fillna : nan olan alanları doldurur\n",
+    "result = df.fillna(value= 'no input')   # nan olanlara no input desin\n",
+    "print(result)\n",
+    "print(\"             ◽   ◽   ◽\")\n",
+    "\n",
+    "\n",
+    "# işlem yapacaksak kolaylık olsun diye nan yerlerine 1 yazdırabiliriz\n",
+    "result = df.fillna(value= '1')\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* devam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   column1  column2  column3  column4\n",
+      "a     72.0     71.0     22.0      NaN\n",
+      "b      NaN      NaN      NaN     30.0\n",
+      "c     30.0     61.0     16.0      NaN\n",
+      "d      NaN      NaN      NaN     51.0\n",
+      "e     32.0     16.0     97.0      NaN\n",
+      "f     58.0     11.0     73.0     30.0\n",
+      "g      NaN      NaN      NaN      NaN\n",
+      "h     64.0     33.0     76.0     10.0\n",
+      "column1    256.0\n",
+      "column2    192.0\n",
+      "column3    284.0\n",
+      "column4    121.0\n",
+      "dtype: float64\n",
+      "853.0\n",
+      "32\n",
+      "column1    3\n",
+      "column2    3\n",
+      "column3    3\n",
+      "column4    4\n",
+      "dtype: int64\n",
+      "13\n",
+      "     column1    column2    column3    column4\n",
+      "a  72.000000  71.000000  22.000000  44.894737\n",
+      "b  44.894737  44.894737  44.894737  30.000000\n",
+      "c  30.000000  61.000000  16.000000  44.894737\n",
+      "d  44.894737  44.894737  44.894737  51.000000\n",
+      "e  32.000000  16.000000  97.000000  44.894737\n",
+      "f  58.000000  11.000000  73.000000  30.000000\n",
+      "g  44.894737  44.894737  44.894737  44.894737\n",
+      "h  64.000000  33.000000  76.000000  10.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 10 -100 arsı 15 sayıdan oluşan 5 e 3 lük matrix oluşturalım\n",
+    "data = np.random.randint(10,100,15).reshape(5,3)\n",
+    "# dataFrame oluşturalım\n",
+    "df = pd.DataFrame(data, index= ['a', 'c', 'e', 'f', 'h'], columns = ['column1','column2','column3'])\n",
+    "# dataFrame tekrar indexleyelim (aralara 3 index daha ekledik)\n",
+    "df = df.reindex(['a','b','c','d','e','f','g','h'])\n",
+    "# yeni kolon oluşturalım\n",
+    "newColumn = [np.nan,30,np.nan,51,np.nan,30,np.nan,10]  # np.nan (nan değer eklemenin kısa yolu) # 8 satır oldu\n",
+    "# kolonu dataFrame imize ekleyelim 4.kolon olarak\n",
+    "df[\"column4\"] = newColumn\n",
+    "print(df)\n",
+    "#----- güncel temel kod\n",
+    "\n",
+    "# nan yerine listedeki tüm ortalama değerleri yazabiliriz\n",
+    "# bunun için toplam eleman sayısını bulup burdan nan olan alanları çıkarmamız , sonra\n",
+    "# nan harici değerlerin toplamı ve normal olan değerlerin toplamına bölümü\n",
+    "\n",
+    "# bu istekle alakalı bir metod oluşturalım ama\n",
+    "# önce bazı bilgileri elde edelim\n",
+    "result = df.sum()   # her kolonun toplam değerlerini getiriyor\n",
+    "print(result)\n",
+    "\n",
+    "result = df.sum().sum() # bu sefer gelen kolonların toplamlarını da topladığı için tüm dataframe in toplamını öğrenmiş oluruz.\n",
+    "print(result)\n",
+    "\n",
+    "result = df.size # eleman sayısı gelir (nan lar da içinde)\n",
+    "print(result)\n",
+    "\n",
+    "result = df.isnull().sum() # null olan alanları hesaplar her kolondaki \n",
+    "print(result)\n",
+    "\n",
+    "result = df.isnull().sum().sum() # hesaplananları da toplar\n",
+    "print(result)\n",
+    "\n",
+    "# metodu oluşturalım\n",
+    "def ortalama(df):\n",
+    "    toplam = df.sum().sum()\n",
+    "    adet = df.size - df.isnull().sum().sum()\n",
+    "    return toplam / adet\n",
+    "\n",
+    "result = df.fillna(value = ortalama(df))\n",
+    "print(result)   # dataFrame deki nan olan yerleri ortalama ile doldurduk"
    ]
   }
  ],
