pandas ile dataFrame metodları

--- a/20 ] Pandas Veri Analizi/10) Pandas İle String Fonks Kullanımı.ipynb
+++ b/20 ] Pandas Veri Analizi/10) Pandas İle String Fonks Kullanımı.ipynb
@@ -397,13 +397,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0    False\n",
+      "1    False\n",
+      "2    False\n",
+      "3    False\n",
+      "4    False\n",
+      "Name: player_name, dtype: bool\n",
       "0        False\n",
       "1        False\n",
       "2        False\n",
@@ -416,18 +422,6 @@
       "12301    False\n",
       "12302    False\n",
       "Name: player_name, Length: 10031, dtype: bool\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'player_name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32md:\\Yasin\\VS Code\\BTK Akademi\\20 ] Pandas Veri Analizi\\10) Pandas İle String Fonks Kullanımı.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Yasin/VS%20Code/BTK%20Akademi/20%20%5D%20Pandas%20Veri%20Analizi/10%29%20Pandas%20%C4%B0le%20String%20Fonks%20Kullan%C4%B1m%C4%B1.ipynb#X15sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mprint\u001b[39m(data) \u001b[39m# true & false şeklinde cevap verir\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Yasin/VS%20Code/BTK%20Akademi/20%20%5D%20Pandas%20Veri%20Analizi/10%29%20Pandas%20%C4%B0le%20String%20Fonks%20Kullan%C4%B1m%C4%B1.ipynb#X15sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39m# true & false seklinde olmasın (sadece isminde jordan geçen kayıtları getirsin)\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Yasin/VS%20Code/BTK%20Akademi/20%20%5D%20Pandas%20Veri%20Analizi/10%29%20Pandas%20%C4%B0le%20String%20Fonks%20Kullan%C4%B1m%C4%B1.ipynb#X15sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m data \u001b[39m=\u001b[39m data\u001b[39m.\u001b[39;49mplayer_name\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mcontains(\u001b[39m'\u001b[39m\u001b[39mJordan\u001b[39m\u001b[39m'\u001b[39m) \u001b[39m# data içersine vermeliyiz\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Yasin/VS%20Code/BTK%20Akademi/20%20%5D%20Pandas%20Veri%20Analizi/10%29%20Pandas%20%C4%B0le%20String%20Fonks%20Kullan%C4%B1m%C4%B1.ipynb#X15sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mprint\u001b[39m(data) \u001b[39m#    < bir üsttekini yorum satırına alıp çalıştır >\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\Yasin\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\generic.py:5902\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5895\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[0;32m   5896\u001b[0m     name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_internal_names_set\n\u001b[0;32m   5897\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_metadata\n\u001b[0;32m   5898\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessors\n\u001b[0;32m   5899\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_info_axis\u001b[39m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[0;32m   5900\u001b[0m ):\n\u001b[0;32m   5901\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m[name]\n\u001b[1;32m-> 5902\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mobject\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(\u001b[39mself\u001b[39;49m, name)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'player_name'"
      ]
     }
    ],
@@ -443,11 +437,140 @@
     "\n",
     "# Jordan ismini arasın\n",
     "data = data.player_name.str.contains('Jordan')\n",
-    "print(data) # true & false şeklinde cevap verir\n",
+    "print(data.head()) # true & false şeklinde cevap verir\n",
     "\n",
     "# true & false seklinde olmasın (sadece isminde jordan geçen kayıtları getirsin)\n",
-    "data = data.player_name.str.contains('Jordan') # data içersine vermeliyiz\n",
+    "#data = data.player_name.str.contains('Jordan') # data içersine vermeliyiz\n",
     "print(data) #    < bir üsttekini yorum satırına alıp çalıştır >"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* devam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Unnamed: 0        player_name team_abbreviation   age  player_height  \\\n",
+      "0           0      Dennis Rodman               CHI  36.0         198.12   \n",
+      "1           1  Dwayne Schintzius               LAC  28.0         215.90   \n",
+      "2           2       Earl Cureton               TOR  39.0         205.74   \n",
+      "3           3        Ed O'Bannon               DAL  24.0         203.20   \n",
+      "4           4        Ed Pinckney               MIA  34.0         205.74   \n",
+      "\n",
+      "   player_weight                      college country draft_year draft_round  \\\n",
+      "0      99.790240  Southeastern Oklahoma State     USA       1986           2   \n",
+      "1     117.933920                      Florida     USA       1990           1   \n",
+      "2      95.254320                Detroit Mercy     USA       1979           3   \n",
+      "3     100.697424                         UCLA     USA       1995           1   \n",
+      "4     108.862080                    Villanova     USA       1985           1   \n",
+      "\n",
+      "   ...  pts   reb  ast  net_rating  oreb_pct  dreb_pct  usg_pct  ts_pct  \\\n",
+      "0  ...  5.7  16.1  3.1        16.1     0.186     0.323    0.100   0.479   \n",
+      "1  ...  2.3   1.5  0.3        12.3     0.078     0.151    0.175   0.430   \n",
+      "2  ...  0.8   1.0  0.4        -2.1     0.105     0.102    0.103   0.376   \n",
+      "3  ...  3.7   2.3  0.6        -8.7     0.060     0.149    0.167   0.399   \n",
+      "4  ...  2.4   2.4  0.2       -11.2     0.109     0.179    0.127   0.611   \n",
+      "\n",
+      "   ast_pct   season  \n",
+      "0    0.113  1996-97  \n",
+      "1    0.048  1996-97  \n",
+      "2    0.148  1996-97  \n",
+      "3    0.077  1996-97  \n",
+      "4    0.040  1996-97  \n",
+      "\n",
+      "[5 rows x 22 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "data = pd.read_csv(\"nba_players.csv\")\n",
+    "data[\"draft_round\"].replace(\"Undrafted\", np.nan, inplace=True) \n",
+    "data.dropna(inplace = True) \n",
+    "#---- temel kod\n",
+    "\n",
+    "# replace metodu ile istemediğimiz karakterleri değiştirelim\n",
+    "# takım kolonundaki boşluk ( ) karakterlerini çizgi (-) ile değiştirelim\n",
+    "#data = data.player_name.str.replace(' ','-')\n",
+    "result = data.head()\n",
+    "print(result)\n",
+    "\n",
+    "# devam"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* devam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Unnamed: 0        player_name team_abbreviation   age  player_height  \\\n",
+      "0           0      Dennis Rodman               CHI  36.0         198.12   \n",
+      "1           1  Dwayne Schintzius               LAC  28.0         215.90   \n",
+      "2           2       Earl Cureton               TOR  39.0         205.74   \n",
+      "3           3        Ed O'Bannon               DAL  24.0         203.20   \n",
+      "4           4        Ed Pinckney               MIA  34.0         205.74   \n",
+      "\n",
+      "   player_weight                      college country draft_year draft_round  \\\n",
+      "0      99.790240  Southeastern Oklahoma State     USA       1986           2   \n",
+      "1     117.933920                      Florida     USA       1990           1   \n",
+      "2      95.254320                Detroit Mercy     USA       1979           3   \n",
+      "3     100.697424                         UCLA     USA       1995           1   \n",
+      "4     108.862080                    Villanova     USA       1985           1   \n",
+      "\n",
+      "   ...  ast  net_rating  oreb_pct  dreb_pct  usg_pct  ts_pct  ast_pct  \\\n",
+      "0  ...  3.1        16.1     0.186     0.323    0.100   0.479    0.113   \n",
+      "1  ...  0.3        12.3     0.078     0.151    0.175   0.430    0.048   \n",
+      "2  ...  0.4        -2.1     0.105     0.102    0.103   0.376    0.148   \n",
+      "3  ...  0.6        -8.7     0.060     0.149    0.167   0.399    0.077   \n",
+      "4  ...  0.2       -11.2     0.109     0.179    0.127   0.611    0.040   \n",
+      "\n",
+      "    season  FirstName    LastName  \n",
+      "0  1996-97     Dennis      Rodman  \n",
+      "1  1996-97     Dwayne  Schintzius  \n",
+      "2  1996-97       Earl     Cureton  \n",
+      "3  1996-97         Ed    O'Bannon  \n",
+      "4  1996-97         Ed    Pinckney  \n",
+      "\n",
+      "[5 rows x 24 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "data = pd.read_csv(\"nba_players.csv\")\n",
+    "data[\"draft_round\"].replace(\"Undrafted\", np.nan, inplace=True) \n",
+    "data.dropna(inplace = True) \n",
+    "#---- temel kod\n",
+    "\n",
+    "# name ve surname 'i ayıralım iki farklı kolonda olsun bu bilgiler\n",
+    "data[[\"FirstName\",\"LastName\"]] = data[\"player_name\"].loc[data[\"player_name\"].str.split().str.len() == 2].str.split(expand = True)\n",
+    "result = data.head()\n",
+    "print(result)"
    ]
   }
  ],
